@@ -11,7 +11,6 @@ import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static com.ancientprogramming.fixedformat4j.format.FixedFormatUtil.getFixedFormatterInstance;
@@ -40,7 +39,7 @@ class ClassMetadataCache {
 
   static final ClassMetadataCache INSTANCE = new ClassMetadataCache();
 
-  private final ClassValue<List<FieldDescriptor>> cache = new ClassValue<List<FieldDescriptor>>() {
+  private final ClassValue<List<FieldDescriptor>> cache = new ClassValue<>() {
     @Override
     protected List<FieldDescriptor> computeValue(Class<?> clazz) {
       return build(clazz);
@@ -69,7 +68,7 @@ class ClassMetadataCache {
         }
       }
     }
-    return Collections.unmodifiableList(result);
+    return List.copyOf(result);
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
@@ -88,17 +87,33 @@ class ClassMetadataCache {
     boolean hasCustomFormatter = fieldAnnotation.formatter() != ByTypeFormatter.class;
     boolean isNestedRecord = !isRepeating && !hasCustomFormatter && datatype.getAnnotation(Record.class) != null;
 
-    FormatContext<?> context = isRepeating ? null : instructionsBuilder.context(datatype, fieldAnnotation);
-    FormatInstructions formatInstructions = isRepeating ? null : instructionsBuilder.build(target.annotationSource, fieldAnnotation, datatype, clazz);
-    FixedFormatter<?> rawFormatter = (isRepeating || isNestedRecord) ? null
-        : getFixedFormatterInstance(context.getFormatter(), context);
-    FixedFormatter<?> formatter = resolveConcreteFormatter(rawFormatter, datatype);
-
     Method setter = resolveSetter(clazz, target.getter, datatype, scanner);
     MethodHandle setterHandle = toHandle(setter);
 
+    if (isRepeating) {
+      Class<?> elementType = repeatingFieldSupport.resolveElementType(target.getter);
+      FormatInstructions formatInstructions = instructionsBuilder.build(target.annotationSource, fieldAnnotation, elementType, clazz);
+      FormatContext protoContext = new FormatContext(fieldAnnotation.offset(), elementType, fieldAnnotation.formatter());
+      // Deliberately NOT unwrapped via resolveConcreteFormatter: ByTypeFormatter resolves its
+      // delegate lazily, keeping the unsupported-element-type failure at parse time
+      // (wrapped in ParseException) exactly as before metadata caching.
+      FixedFormatter<?> formatter = getFixedFormatterInstance(protoContext.getFormatter(), protoContext);
+      FormatContext<?>[] elementContexts = new FormatContext[fieldAnnotation.count()];
+      for (int i = 0; i < elementContexts.length; i++) {
+        elementContexts[i] = new FormatContext(fieldAnnotation.offset() + fieldAnnotation.length() * i, elementType, fieldAnnotation.formatter());
+      }
+      return new FieldDescriptor(target, setter, setterHandle, fieldAnnotation, datatype, null,
+          formatInstructions, formatter, true, false, isLoadField, elementType, elementContexts);
+    }
+
+    FormatContext<?> context = instructionsBuilder.context(datatype, fieldAnnotation);
+    FormatInstructions formatInstructions = instructionsBuilder.build(target.annotationSource, fieldAnnotation, datatype, clazz);
+    FixedFormatter<?> rawFormatter = isNestedRecord ? null
+        : getFixedFormatterInstance(context.getFormatter(), context);
+    FixedFormatter<?> formatter = resolveConcreteFormatter(rawFormatter, datatype);
+
     return new FieldDescriptor(target, setter, setterHandle, fieldAnnotation, datatype, context,
-        formatInstructions, formatter, isRepeating, isNestedRecord, isLoadField);
+        formatInstructions, formatter, false, isNestedRecord, isLoadField, null, null);
   }
 
   private FixedFormatter<?> resolveConcreteFormatter(FixedFormatter<?> candidate, Class<?> datatype) {
